<resources>
    <string name="app_name">Udrop</string>
    <string name="profile_activity_title">Profile</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="save_changes">Save Changes</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="phone">phone #</string>
    <string name="nickname">nickname</string>
    <string name="friends">Friends</string>
    <string name="homepage">Homepage</string>
    <string name="drops">Drops</string>
    <string name="profile">Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="delete">Delete</string>
    <string name="password">password</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">confirm password</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_api">AIzaSyA8uK7mI8Ytnj-ZA24QNFoPqwUphUH7p9Y</string>
    <string name="new_udrop">New Udrop</string>
    <string name="locations">Locations</string>
    <string name="plus">+</string>
    <string name="add_friend">Add Friend</string>
    <string name="textMessage">What would you like to say?</string>
    <string name="back">BACK</string>
    <string name="send">SEND</string>
    <string name="add">add</string>
    <string name="add_location">add location</string>
    <string name="subject">subject</string>
    <string name="messenger_locations">messenger locations</string>
</resources>
