<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/accent">

    <TextView
        android:id="@+id/loginTitle_TV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"

        android:text="@string/login"
        android:textColor="@color/primary_text"
        android:textSize="36sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/saveLoginCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPassword_ET"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="26dp"
        android:text="Save Login?"
        android:textColor="@color/primary_text"
        android:background="@color/primary_dark"
        app:layout_constraintBottom_toTopOf="@+id/loginEmail_ET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loginEmail_ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"

        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"

        app:layout_constraintBottom_toTopOf="@+id/loginPassword_ET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loginPassword_ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"

        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"

        app:layout_constraintBottom_toTopOf="@+id/loginSignIn_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginSignIn_Btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"

        android:background="@color/primary_dark"
        android:text="@string/sign_in"
        android:textColor="@color/primary_text"

        app:layout_constraintBottom_toTopOf="@+id/loginSignUp_Btn"
        app:layout_constraintEnd_toEndOf="@+id/loginPassword_ET"
        app:layout_constraintStart_toStartOf="@+id/loginPassword_ET" />

    <Button
        android:id="@+id/loginSignUp_Btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"

        android:background="@color/primary_dark"
        android:text="@string/sign_up"
        android:textColor="@color/primary_text"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginPassword_ET"
        app:layout_constraintStart_toStartOf="@+id/loginPassword_ET" />

</androidx.constraintlayout.widget.ConstraintLayout>